--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 dependencies {
     testCompile(
             'junit:junit:4.12',
-            'org.jmock:jmock:2.8.2',
+            'org.jmock:jmock-junit4:2.8.2',
             'org.codehaus.groovy:groovy-all:2.4.7'
     )
 }
