--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ repositories {
 }
 
 dependencies {
+    compile(
+            'org.apache.velocity:velocity:1.7'
+    )
     testCompile(
             'junit:junit:4.12',
             'org.jmock:jmock-junit4:2.8.2',
