--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,6 @@ dependencies {
     testCompile(
             'junit:junit:4.12',
             'org.jmock:jmock-junit4:2.8.2',
-            'org.codehaus.groovy:groovy-all:2.4.7'
+            'org.spockframework:spock-core:1.1-groovy-2.4-rc-3'
     )
 }
